fix: switch dark mode font family

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,8 @@ body {
   background-color: #f5f5f5;
   color: #333;
   transition: background-color 0.3s;
+  font-family: 'PingFang SC', -apple-system, 'Segoe UI', 'Microsoft YaHei',
+    sans-serif;
 }
 
 .semi-divider_inner-text {
